account data modified.

--- a/appsettings.json
+++ b/appsettings.json
@@ -66,7 +66,12 @@
       //TppBalance Enquiry Screen
       "GetAllTppBalancesAsync": "OF_TppBalances_GetAll",
       "GetTppBalancesByDateAsync": "OF_TppBalances_ListByDate",
-      "GetTppBalancesByIdAsync": "OF_TppBalances_GetById"
+      "GetTppBalancesByIdAsync": "OF_TppBalances_GetById",
+
+      //TppAccounts Enquiry Screen
+      "GetAllTppAccountsAsync": "OF_TppAccounts_GetAll",
+      "GetTppAccountsByDateAsync": "OF_TppAccounts_ListByDate",
+      "GetTppAccountsByIdAsync": "OF_TppAccounts_GetById"
 
     }
   },
