tpp  search Modified.

--- a/appsettings.json
+++ b/appsettings.json
@@ -71,7 +71,13 @@
       //TppAccounts Enquiry Screen
       "GetAllTppAccountsAsync": "OF_TppAccounts_GetAll",
       "GetTppAccountsByDateAsync": "OF_TppAccounts_ListByDate",
-      "GetTppAccountsByIdAsync": "OF_TppAccounts_GetById"
+      "GetTppAccountsByIdAsync": "OF_TppAccounts_GetById",
+
+      //TppCustomer Enquiry Screen
+      "GetAllTppCustomerAsync": "OF_TppCustomers_GetAll",
+      "GetTppCustomerByDateAsync": "OF_TppCustomer_ListByDate",
+      "GetTppCustomerByIdAsync": "OF_TppCustomer_GetById"
+
 
     }
   },
