--- a/DataSharing_API.csproj
+++ b/DataSharing_API.csproj
@@ -23,6 +23,8 @@
 	  <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
 	  <PackageReference Include="NLog" Version="5.4.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
+	  <PackageReference Include="AspNetCore.HealthChecks.UI" Version="5.0.1" />
+	  <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
 
   </ItemGroup>
 
