--- a/appsettings.json
+++ b/appsettings.json
@@ -76,8 +76,14 @@
       //TppCustomer Enquiry Screen
       "GetAllTppCustomerAsync": "OF_TppCustomers_GetAll",
       "GetTppCustomerByDateAsync": "OF_TppCustomer_ListByDate",
-      "GetTppCustomerByIdAsync": "OF_TppCustomer_GetById"
+      "GetTppCustomerByIdAsync": "OF_TppCustomer_GetById",
 
+      "RetrieveCoPQueryData": "Get_CoPQueryData_Detail",
+      "RetrieveCoPQueryDataByRefId": "Get_CoPQueryData_DetailBy_RefId",
+      "RetrieveCoPQueryDataSearchByRefId": "Get_CoPQueryData_DetailSearchBy_RefId"
+
+
+      
 
     }
   },
