Create Lead Modified.

--- a/appsettings.json
+++ b/appsettings.json
@@ -102,7 +102,14 @@
       "RetrieveLfiMortgageDetailByRefId": "Get_Lfi_Mortgage_DetailBy_RefId",
       "RetrieveLfiMortgageSearch": "Get_Lfi_MortgageSearch",
 
-      "RetrieveLfiProductQuoteMaster": "Get_Lfi_ProductQuoteMaster"
+      "RetrieveLfiProductQuoteMaster": "Get_Lfi_ProductQuoteMaster",
+
+      //Create Lead Screen 
+
+      "RetrieveCreateLead": "Get_CreateLead_Detail",
+      "RetrieveCreateLeadByRefId": "Get_CreateLead_DetailBy_RefId",
+      "RetrieveCreateLeadSearchByRefId": "Get_CreateLead_DetailSearchBy_RefId"
+
 
     }
   },
