--- a/appsettings.json
+++ b/appsettings.json
@@ -28,9 +28,9 @@
       "RetrieveAccountDataByRefId": "Get_AccountData_DetailBy_RefId",
       "RetrieveAccountDataSearchByRefId": "Get_AccountData_DetailSearchBy_RefId",
 
-      "RetrieveTransactionData": "Get_TransactionData_Detail",
-      "RetrieveTransactionDataByRefId": "Get_TransactionData_DetailBy_RefId",
-      "RetrieveTransactionDataSearchByRefId": "Get_TransactionData_DetailSearchBy_RefId",
+      //"RetrieveTransactionData": "Get_TransactionData_Detail",
+      //"RetrieveTransactionDataByRefId": "Get_TransactionData_DetailBy_RefId",
+      //"RetrieveTransactionDataSearchByRefId": "Get_TransactionData_DetailSearchBy_RefId",
 
 
       "RetrieveBeneficiariesData": "Get_BeneficiariesData_Detail",
@@ -108,7 +108,12 @@
 
       "RetrieveCreateLead": "Get_CreateLead_Detail",
       "RetrieveCreateLeadByRefId": "Get_CreateLead_DetailBy_RefId",
-      "RetrieveCreateLeadSearchByRefId": "Get_CreateLead_DetailSearchBy_RefId"
+      "RetrieveCreateLeadSearchByRefId": "Get_CreateLead_DetailSearchBy_RefId",
+
+      //Transcational Data
+      "RetrieveLfiTransactionalData": "Get_Lfi_TransactionalData_Detail",
+      "RetrieveLfiTransactionalDataByRefId": "Get_Lfi_TransactionalData_DetailBy_RefId",
+      "RetrieveLfiTransactionalDataSearch": "Get_Lfi_TransactionalData_Search"
 
 
     }
