Scheduled Payment/StandingOrder Modified.

--- a/appsettings.json
+++ b/appsettings.json
@@ -38,7 +38,7 @@
       "RetrieveBeneficiariesDataByRefId": "Get_BeneficiariesData_DetailBy_RefId",
       "RetrieveBeneficiariesDataSearchByRefId": "Get_BeneficiariesData_DetailSearchBy_RefId",
 
-      "RetrieveDirectDebitData": "Get_DirectDebitData_Detail",
+      "RetrieveDirectDebitData": "Get_DirectDebit Data_Detail",
       "RetrieveDirectDebitDataByRefId": "Get_DirectDebitData_DetailBy_RefId",
       "RetrieveDirectDebitDataSearchByRefId": "Get_DirectDebitData_DetailSearchBy_RefId",
 
@@ -46,13 +46,13 @@
       "RetrieveProductDataByRefId": "Get_ProductData_DetailBy_RefId",
       "RetrieveProductDataSearchByRefId": "Get_ProductData_DetailSearchBy_RefId",
 
-      "RetrievePaymentData": "Get_SchedPaymentData_Detail",
-      "RetrievePaymentDataByRefId": "Get_SchedPayment_DetailBy_RefId",
-      "RetrievePaymentDataSearchByRefId": "Get_SchedPaymentData_DetailSearchBy_RefId",
+      "RetrievePaymentData": "Get_Lfi_SchedPaymentData_Detail",
+      "RetrievePaymentDataByRefId": "Get_Lfi_SchedPayment_DetailBy_RefId",
+      "RetrievePaymentDataSearchByRefId": "Get_Lfi_SchedPaymentData_DetailSearchBy_RefId",
 
-      "RetrieveStandingOrderData": "Get_StandingOrderData_Detail",
-      "RetrieveStandingOrderDataByRefId": "Get_StandingOrder_DetailBy_RefId",
-      "RetrieveStandingOrderDataSearchByRefId": "Get_StandingOrderData_DetailSearchBy_RefId",
+      "RetrieveStandingOrderData": "Get_Lfi_StandingOrderData_Detail",
+      "RetrieveStandingOrderDataByRefId": "Get_Lfi_StandingOrder_DetailBy_RefId",
+      "RetrieveStandingOrderDataSearchByRefId": "Get_Lfi_StandingOrderData_DetailSearchBy_RefId",
 
       "RetrieveStatementData": "Get_Lfi_StatementData_Detail",
       "RetrieveStatementDataByRefId": "Get_Lfi_Statement_DetailBy_RefId",
